Changes in 22.1
===============
2005-12-16 Craig Small
	* fuser -s flag works Debian #344901
	* fix grep lines in Makefile for i386 arches Debian #344172
	* Updsated Polish PO file

Changes in 21.9
===============
2005-12-16 Craig Small 
	* Fixed install-exec-hook so only symlink pstree.x11 if file does not
	exist already.
	* Updated Vietnamese PO file

2005-12-02 Karel Zak
	* buffer overflow in killall scanf removed

2005-11-26 Paul Martin
	* Fixed segfault in pstree -a Debian #338108

2005-11-22 Craig Small
	* fuser can not use IPv6, for things like uClibc
	* configure has --disable-ipv6 for above

2005-11-15 Craig Small
	* fuser finds unix sockets. Debian #338868

2005-11-05 Rene Rebe <rene@exactcode.de>
	* fixed print_matches to only print unmatched objects if -a is
	  specified and to output the header for -v
	* Above patch fixes Debian #342765
	* fixed argument parsing to handle groups like -av again

Changes in 21.8
===============
	* fuser returns 1 if no match found like before.
	* fuser.1 spells behavior correctly Debian: #337190


Changes in 21.7
===============
	* Upgraded SELinux code to new api, thanks to Chris PeBenito
	* define rpmatch for libraries that dont have it
	* Fixed small typos in help, thanks to Benno Schulenberg
	  fixes SF# 1150042
	* Completed change from Flask to SELinux, thanks to Benno Schulenberg
	* pstree works better with uClibc, thanks Mike Frysinger
	* fuser rewritten: possibly fixes Debian #312560
	* fuser prints F instead of f is access is write, thanks to Tet.
	* pstree checks to see it is a real tty Debian #326500
	* pstree shows child threads with {commandname} Debian #230924
	* better capitalisation with usage SF# 1150042
	* Added warning about fuser and tcp/udp access Debian #327813
	* pstree defaults to ASCII not VT100 until problems with terminals
	  are fixed Debian #288856
	* fuser doesnt complain if it cannot scan some mount points Debian
	  #299153

	* Applied psmisc-21.4-alt-progname to find pstrees name